@@ -4,6 +4,9 @@ SVN
 ===
 - easy dictionary access for EDICT, CEDICT and others
 - multiple database support
+- pronunciation information from Unihan's kMandarin is not used anymore due to
+  unknown provenance, see thread under
+  http://www.unicode.org/mail-arch/unicode-ml/y2010-m01/0246.html
 - stroke order corrections and new entries
 - character decomposition corrections
 - fix stroke order calculation for scheme ⿷ that affects characters with
